--- a/b3.html
+++ b/b3.html
@@ -23,7 +23,7 @@ function check() {
             return false
         }
     }
-    document.write(count)
+    document.write('số lần xuất hiện nguyên âm là: '+ count)
 }
 
 console.log(check())
