--- a/b2.html
+++ b/b2.html
@@ -14,9 +14,12 @@
         for (let i = 0;i<arr.length;i++){
             if (b===arr[i]){
                 document.write(arr.indexOf(b))
+            }else {
+                document.write('số không thuộc mảng')
+                break
             }
         }
     }
-    check(arr,5)
+    check(arr,6)
 
 </script>
