--- a/b3.html
+++ b/b3.html
@@ -19,7 +19,8 @@ function check() {
             if (arr[i]===arr1[j]){
                 count+=1;
             }
-        }if (count===0) {
+        }
+        if (count===0) {
             return false
         }
     }
