--- a/b2.html
+++ b/b2.html
@@ -10,14 +10,25 @@
 </html>
 <script>
     let arr = [1,2,3,4,5]
-    function check(arr,b) {
+    let x = +prompt('nhập số')
+    function checkFunc(arr,b) {
+        let checkFunction = true;
         for (let i = 0;i<arr.length;i++){
             if (b===arr[i]){
-                document.write(arr.indexOf(b))
+                document.write(i)
+                checkFunction= true;
+                break
             }
+            else {
+                checkFunction= false
+            }
+        }
+        if (checkFunction === false){
+            document.write('k thuộc mảng')
         }
     }
 
-    check(arr,5)
+    checkFunc(arr,x)
+
 
 </script>
